load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "agent_lib",
    srcs = [
        "agent.go",
        "hwreport.go",
        "install.go",
    ],
    embedsrcs = [
        "//metropolis/node/core/abloader",  #keep
    ],
    importpath = "source.monogon.dev/cloud/agent",
    visibility = ["//visibility:private"],
    deps = [
        "//cloud/agent/api",
        "//cloud/bmaas/server/api",
        "//metropolis/node/core/devmgr",
        "//metropolis/node/core/network",
        "//osbase/blockdev",
        "//osbase/bringup",
        "//osbase/build/mkimage/osimage",
        "//osbase/efivarfs",
        "//osbase/net/proto",
        "//osbase/nvme",
        "//osbase/oci/osimage",
        "//osbase/oci/registry",
        "//osbase/pki",
        "//osbase/scsi",
        "//osbase/smbios",
        "//osbase/structfs",
        "//osbase/supervisor",
        "@com_github_cenkalti_backoff_v4//:backoff",
        "@com_github_mdlayher_ethtool//:ethtool",
        "@com_github_vishvananda_netlink//:netlink",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_sys//unix",
    ],
)

go_binary(
    name = "agent",
    embed = [":agent_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "agent_test",
    srcs = ["hwreport_test.go"],
    data = glob(["testdata/**"]),
    embed = [":agent_lib"],
    deps = [
        "//cloud/agent/api",
        "@com_github_stretchr_testify//assert",
    ],
)
