load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "apigw_lib",
    srcs = ["main.go"],
    importpath = "source.monogon.dev/cloud/apigw",
    visibility = ["//visibility:private"],
    deps = [
        "//cloud/apigw/server",
        "@io_k8s_klog_v2//:klog",
    ],
)

go_binary(
    name = "apigw",
    embed = [":apigw_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "apigw_layer",
    srcs = [":apigw"],
)

oci_image(
    name = "apigw_image",
    base = "@distroless_base",
    entrypoint = ["/apigw"],
    tars = [":apigw_layer"],
    visibility = ["//visibility:public"],
    workdir = "/app",
)
