load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "git.monogon.dev/source/smalltown.git/cmd/init",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/network:go_default_library",
        "//internal/node:go_default_library",
        "//pkg/tpm:go_default_library",
        "@org_golang_x_sys//unix:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_binary(
    name = "init",
    embed = [":go_default_library"],
    pure = "on",  # keep
    visibility = ["//visibility:public"],
)
