load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["localconfig.go"],
    importpath = "git.monogon.dev/source/nexantic.git/intellij/localconfig",
    visibility = ["//visibility:private"],
    deps = ["//intellij/localconfig/watchers:go_default_library"],
)

go_binary(
    name = "localconfig",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
