load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//osbase/build/genosrelease:defs.bzl", "os_release")
load("//osbase/build/mkcpio:def.bzl", "node_initramfs")
load("//osbase/build/mkpayload:def.bzl", "efi_unified_kernel_image")

go_library(
    name = "installer_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "//build:copyright_line.txt",  #keep
        "//metropolis/node/abloader",  #keep
    ],
    importpath = "source.monogon.dev/metropolis/installer",
    visibility = ["//visibility:private"],
    deps = [
        "//osbase/blockdev",
        "//osbase/bringup",
        "//osbase/build/mkimage/osimage",
        "//osbase/efivarfs",
        "//osbase/oci",
        "//osbase/oci/osimage",
        "//osbase/structfs",
        "//osbase/supervisor",
        "//osbase/sysfs",
        "@org_golang_x_sys//unix",
    ],
)

go_binary(
    name = "installer",
    embed = [":installer_lib"],
    visibility = ["//visibility:private"],
)

node_initramfs(
    name = "initramfs",
    files = {
        "/init": "//metropolis/installer",
    },
    fsspecs = [
        "//osbase/build:earlydev.fsspec",
    ],
    visibility = ["//metropolis/installer/test:__pkg__"],
)

os_release(
    name = "installer-release-info",
    os_id = "metropolis-installer",
    os_name = "Metropolis Installer",
    stamp_var = "STABLE_MONOGON_metropolis_version",
)

efi_unified_kernel_image(
    name = "kernel",
    cmdline = "console=ttyS0,115200 console=tty0 quiet",
    initrd = [
        "//third_party:ucode",
        ":initramfs",
    ],
    kernel = "//third_party/linux",
    os_release = ":installer-release-info",
    visibility = ["//visibility:public"],
)
