load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("//version:defs.bzl", "go_version_library")

go_version_library(
    name = "version_lib",
    importpath = "source.monogon.dev/metropolis/version",
    product = "metropolis",
)

go_library(
    name = "version",
    embed = [
        ":version_lib",  # keep
    ],
    importpath = "source.monogon.dev/metropolis/version",  # keep
    visibility = [
        "//metropolis:__subpackages__",
    ],
)
