load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dump",
    srcs = [
        "hwaddr_compat.go",
        "netdump.go",
    ],
    importpath = "source.monogon.dev/net/dump",
    visibility = ["//visibility:public"],
    deps = [
        "//net/proto",
        "@com_github_vishvananda_netlink//:netlink",
        "@org_golang_x_sys//unix",
    ],
)
