load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "net_proto_proto",
    srcs = ["net.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "net_proto_go_proto",
    importpath = "source.monogon.dev/net/proto",
    proto = ":net_proto_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":net_proto_go_proto"],
    importpath = "source.monogon.dev/net/proto",
    visibility = ["//visibility:public"],
)
