load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//osbase/test/ktest:ktest.bzl", "k_test")

go_library(
    name = "blockdev",
    srcs = [
        "blockdev.go",
        "blockdev_darwin.go",
        "blockdev_linux.go",
        "blockdev_windows.go",
        "memory.go",
    ],
    importpath = "source.monogon.dev/osbase/blockdev",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@org_golang_x_sys//unix",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "@org_golang_x_sys//windows",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "blockdev_test",
    srcs = [
        "blockdev_linux_test.go",
        "blockdev_test.go",
    ],
    embed = [":blockdev"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//osbase/loop",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//osbase/loop",
        ],
        "//conditions:default": [],
    }),
)

k_test(
    name = "ktest",
    tester = ":blockdev_test",
)
