load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "bootparam",
    srcs = [
        "bootparam.go",
        "params.go",
    ],
    importpath = "source.monogon.dev/osbase/bootparam",
    visibility = ["//visibility:public"],
)

go_test(
    name = "bootparam_test",
    srcs = [
        "bootparam_test.go",
        "params_test.go",
    ],
    embed = [":bootparam"],
    gc_goopts = ["-d=libfuzzer"],
    pure = "off",
    deps = [
        "//osbase/bootparam/ref",
        "@com_github_google_go_cmp//cmp",
    ],
)
