load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "efivarfs",
    srcs = [
        "boot.go",
        "devicepath.go",
        "efivarfs.go",
        "variables.go",
    ],
    importpath = "source.monogon.dev/osbase/efivarfs",
    visibility = ["//visibility:public"],
    deps = [
        "//osbase/msguid",
        "@com_github_google_uuid//:uuid",
        "@org_golang_x_text//encoding/unicode",
    ],
)

go_test(
    name = "efivarfs_test",
    srcs = [
        "boot_test.go",
        "devicepath_test.go",
    ],
    embed = [":efivarfs"],
    gc_goopts = ["-d=libfuzzer"],
    deps = [
        "@com_github_google_go_cmp//cmp",
        "@com_github_google_uuid//:uuid",
    ],
)
