load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//osbase/test/ktest:ktest.bzl", "ktest")

go_library(
    name = "fsquota",
    srcs = ["fsquota.go"],
    importpath = "source.monogon.dev/osbase/fsquota",
    visibility = ["//visibility:public"],
    deps = [
        "//osbase/fsquota/fsxattrs",
        "//osbase/fsquota/quotactl",
        "@org_golang_x_sys//unix",
    ],
)

go_test(
    name = "fsquota_test",
    srcs = ["fsquota_test.go"],
    embed = [":fsquota"],
    pure = "on",
    deps = [
        "@com_github_stretchr_testify//require",
        "@org_golang_x_sys//unix",
    ],
)

ktest(
    cmdline = "ramdisk_size=51200",
    files_cc = {
        "@xfsprogs//:mkfs": "/mkfs.xfs",
    },
    tester = ":fsquota_test",
)
