load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("//osbase/test/ktest:ktest.bzl", "k_test")

go_library(
    name = "gpt",
    srcs = [
        "gpt.go",
        "mbr.go",
    ],
    importpath = "source.monogon.dev/osbase/gpt",
    visibility = ["//visibility:public"],
    deps = [
        "//osbase/blockdev",
        "//osbase/msguid",
        "@com_github_google_uuid//:uuid",
    ],
)

go_test(
    name = "gpt_test",
    srcs = [
        "gpt_test.go",
        "linux_test.go",
        "mbr_test.go",
        "structs_test.go",
    ],
    embed = [":gpt"],
    deps = [
        "//osbase/blockdev",
        "@com_github_google_uuid//:uuid",
    ],
)

k_test(
    name = "ktest",
    cmdline = "ramdisk_size=4096",
    tester = ":gpt_test",
)
